Renaming sushi-syntaxx to sushi-dark-syntax

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "sushi-syntaxx",
+  "name": "sushi-dark-syntax",
   "theme": "syntax",
   "version": "0.0.0",
   "description": "I love sushi!",
